@@ -1193,6 +1193,19 @@ name|output
 init|=
 name|NO_OUTPUT
 decl_stmt|;
+name|int
+name|limit
+init|=
+name|dictionary
+operator|.
+name|fullStrip
+condition|?
+name|length
+else|:
+name|length
+operator|-
+literal|1
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1202,9 +1215,7 @@ literal|0
 init|;
 name|i
 operator|<
-name|length
-operator|-
-literal|1
+name|limit
 condition|;
 name|i
 operator|++
@@ -1730,6 +1741,17 @@ name|output
 init|=
 name|NO_OUTPUT
 decl_stmt|;
+name|int
+name|limit
+init|=
+name|dictionary
+operator|.
+name|fullStrip
+condition|?
+literal|0
+else|:
+literal|1
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1738,8 +1760,8 @@ init|=
 name|length
 init|;
 name|i
-operator|>
-literal|0
+operator|>=
+name|limit
 condition|;
 name|i
 operator|--
